development has been stopped

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     <div class="peek-loader"></div>
   </main>
   <div id="peek-zoom-label"></div>
+  <div id="peek-debug"></div>
   <script src="mermaid.min.js"></script>
   <script src="script.bundle.js"></script>
 </body>
